hphp/test/zend/bad/ext/phar/tests/phar_gobyebye.2.php
<?php Phar::unlinkArchive("/data/users/liranuna/fbcode/hphp/test/zend/bad/ext/phar/tests/phar_gobyebye.phar.php");